--- a/server/package.json
+++ b/server/package.json
@@ -11,12 +11,13 @@
   },
   "dependencies": {
     "apollo-server-express": "^1.3.2",
+    "app-root-path": "^2.0.1",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
+    "debug": "^3.1.0",
     "dotenv": "^5.0.1",
     "ejs": "^2.5.7",
     "express": "^4.16.3",
-    "express-jwt": "^5.3.1",
     "firebase-admin": "^5.12.0",
     "graphql": "^0.12.3",
     "graphql-date": "^1.0.3",
@@ -24,8 +25,10 @@
     "http-errors": "^1.6.3",
     "jsonwebtoken": "^8.2.0",
     "mongoose": "^5.0.10",
+    "morgan": "^1.9.0",
     "serve-favicon": "^2.4.5",
-    "uuid": "^3.2.1"
+    "uuid": "^3.2.1",
+    "winston": "^2.4.2"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
